# vladimir-tts-studio

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  utils.py
.github/scripts/: fake_piper_train.py
.github/workflows/: ci.yml  windows-ci-smoke.yml
app/: doctor.py  main.py  workflows.py
configs/: paths.yaml  train_default.yaml
dataset/: audio_tools.py  manifest.py  segmenter.py  text_cleaner.py
requirements/: base.txt  runtime.txt  train.txt
scripts/: 00_bootstrap.ps1  00_one_click.ps1  00_setup_env.ps1  00_setup_env.py  02_run_studio.py  03_train_one_click.py  04_export_onnx.py  05_test_voice.py  06_doctor.py  07_resolve_pr_conflicts.py  10_build_monotonic_align.py  setup.ps1
studio/: api.py  server.py
studio/web/: app.js  index.html  styles.css
tests/: test_app_main.py  test_doctor.py  test_export_onnx.py  test_imports.py  test_manifest.py  test_piper_export_onnx_compat.py  test_segmenter.py  test_setup.py  test_smoke_windows_ci.py  test_studio_api_models.py  test_text_cleaner.py  test_training.py  test_training_checkpoints.py  test_training_infer.py  test_training_train.py  test_training_utils.py  test_workflows.py
tools/: ckpt_info.py  win_train_gui.py
training/: checkpoints.py  export_onnx.py  infer.py  onnx_config.py  piper_export_onnx_compat.py  piper_train_bootstrap.py  train.py  utils.py
