[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vladimir-piper-voice-lab"
version = "0.1.0"
description = "Windows-friendly Piper voice dataset, recording and training lab"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn>=0.30.0",
  "python-multipart>=0.0.9",
  "ffmpeg-python"
]

[project.optional-dependencies]
runtime = [
  "piper-tts"
]

[tool.setuptools]
packages = ["app", "dataset", "studio", "training"]


[project.scripts]
vladimir-voice-lab = "app.main:main"
